2.8x Crash when loading 2.79 file #81168

Closed
opened 2020-09-25 16:05:46 +02:00 by jordan sautron · 9 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87

Blender Version
Broken: version: 2.83.6, branch: master, commit date: 2020-09-09 07:32, hash: 8610c69777
Worked: (newest version of Blender that worked as expected)

Short description of error
Blender 2.8x crash when loading a 2.79 blend file
I made some tests and think that the crash is related to group and group instance.

Exact steps for others to reproduce the error
Load Crash_with_empty.blend (who is a 2.79 blend) in Blender 2.8x and he will crash.
The .blend is very light with just a group instancier and a group who contains an empty.
Crash_with_empty.blend

You can also load Ok_with_mesh.blend who is the same configuration but with a mesh in the group; and this time it well be fine.
Ok_with_mesh.blend

I have this issue on multiple windows machine (i have not test on Linux or Mac)

Post Scriptum
I work for a company that has been using Blender for years at a rate of around 100 renderings per day. We recently upgraded to Blender version 2.83.x.
Blender 2.79 was great, next versions could be even better.
So let's do it together!

Thank

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87 **Blender Version** Broken: version: 2.83.6, branch: master, commit date: 2020-09-09 07:32, hash: `8610c69777` Worked: (newest version of Blender that worked as expected) **Short description of error** Blender 2.8x crash when loading a 2.79 blend file I made some tests and think that the crash is related to group and group instance. **Exact steps for others to reproduce the error** Load Crash_with_empty.blend (who is a 2.79 blend) in Blender 2.8x and he will crash. The .blend is very light with just a group instancier and a group who contains an empty. [Crash_with_empty.blend](https://archive.blender.org/developer/F8920106/Crash_with_empty.blend) You can also load Ok_with_mesh.blend who is the same configuration but with a mesh in the group; and this time it well be fine. [Ok_with_mesh.blend](https://archive.blender.org/developer/F8920108/Ok_with_mesh.blend) I have this issue on multiple windows machine (i have not test on Linux or Mac) **Post Scriptum** I work for a company that has been using Blender for years at a rate of around 100 renderings per day. We recently upgraded to Blender version 2.83.x. Blender 2.79 was great, next versions could be even better. So let's do it together! Thank

Added subscriber: @jordan.sautron

Added subscriber: @jordan.sautron

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Thanks for the report. I can confirm the crash when opening your file.

The crash happens in the versioning code that updates the blend file for 2.80.

This also causes an assert in debug mode:
BLI_assert(collection_hidden != NULL);

Thanks for the report. I can confirm the crash when opening your file. The crash happens in the versioning code that updates the blend file for 2.80. This also causes an assert in debug mode: `BLI_assert(collection_hidden != NULL);`

Added subscriber: @mont29

Added subscriber: @mont29

Not sure how you created that file, but it is not a valid one, in that your Empty object in the group is not instantiated in any scene, which should never happen.

Will fix the doversion code to cope with that situation though.

Not sure how you created that file, but it is not a valid one, in that your Empty object in the group is not instantiated in any scene, which should never happen. Will fix the doversion code to cope with that situation though.

This issue was referenced by b72df3a4a4

This issue was referenced by b72df3a4a4ad2e88eac27dc72fad6942555da2ee

This issue was referenced by 0295e14f5f

This issue was referenced by 0295e14f5f26dcaf557011b001e0ae314d3cc0ee

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2020-09-26 09:23:56 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81168
There is no content yet.